--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,25 +8,25 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for October 22nd</h1>
-            <h3>Week 20 Day 2 (Intro to HTML Day 2)</h3>
+            <h1>GDWD 105 - Agenda for October 23rd</h1>
+            <h3>Week 20 Day 3 (Intro to HTML Day 3)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your favorite restaurant?</li>
+                        <li>What is your favorite snack food/dessert?</li>
                     </ul>
-                    <div class="img-container more-space dark-red">
+                    <div class="img-container">
                         <img 
-                            src="images/pho-fox.webp"
-                            alt="pho-fox"
+                            src="images/snacks.webp"
+                            alt="snack panda"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Code Skeleton Setup</li>
-                        <li><span class="type">Exercise</span>Hello World</li>
                         <li><span class="type">Exercise</span>Basic HTML Drills</li>
+                        <li><span class="type">Exercise</span>Wiki Page</li>
+
                     </ul>
                 </div>
 
@@ -36,25 +36,24 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Code Skeleton Setup</li>
-                            <li><span class="type">Exercise</span>Hello World</li>
-                            <li><span class="type">PowerPoint</span>Intro to GitHub</li>
+                            <li><span class="type">Demo</span>HTML Text Styling Elements [cont.]</li>
+                            <li><span class="type">Exercise</span>Basic HTML Drills</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>HTML Tags and Elements</li>
-                            <li><span class="type">Demo</span>HTML Heading Elements</li>
+                            <li><span class="type">Demo</span>HTML Lists | Parent/Child Relationships</li>
+                            <li><span class="type">Demo</span>HTML Images</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>HTML Text Styling Elements</li>
-                            <li><span class="type">Exercise</span>Basic HTML Drills</li>
+                            <li><span class="type">Exercise</span>Wiki Page</li>
+
                         </ul>
                     </div>
                 </div>
