--- a/cookbook/appetizers/pantheon-wordpress-setup.html
+++ b/cookbook/appetizers/pantheon-wordpress-setup.html
@@ -118,7 +118,7 @@
                             </p>
                             <p>
                                 Visit the following link and click the big 
-                                yellow "Start Free" button on that page:
+                                yellow "Get Started" button on that page:
                             </p>
                             <p>
                                 <a
@@ -133,7 +133,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/pantheon-wordpress-setup/01_pantheon_homepage.png" 
+                                src="images/pantheon-wordpress-setup/01_pantheon_homepage_v2.png" 
                                 alt="Click the Start Free button on the Pantheon Home page"
                             >
                             <figcaption>
@@ -147,39 +147,24 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                On the next page, we'll be filling out some 
+                                On the next page(s), fill out the required 
                                 information to create your Pantheon account.
                             </p>
                             <p>
-                                You have two different options for how to sign 
-                                up:
-                                <ul>
-                                    <li>
-                                        Method #1 - Filling out the data fields 
-                                        manually 
-                                        <ul>
-                                            <li>
-                                                If choosing this approach, just 
-                                                use your personal email 
-                                                address for the <b>Email</b>
-                                                field
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        Method #2 - Using your Google account 
-                                        to auto-populate the data.
-                                    </li>
-                                </ul>
-                            </p>
-                            <p>
-                                Choose whichever method you're most 
+                                You can sign up with your Google account,
+                                or an email address. Choose whichever method you're most 
                                 comfortable with.
+                            </p>
+                            <p class="indent">
+                                If you choose to sign up with an email address,
+                                you will be required to verify that email 
+                                address, so be sure to pick an email address
+                                with an Inbox you have access to.
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/pantheon-wordpress-setup/02_pantheon_signup_v2.png" 
+                                src="images/pantheon-wordpress-setup/02_pantheon_signup_v3.png" 
                                 alt="Fill out the required data fields to create your account, or use Google to sign up"
                             >
                             <figcaption>
@@ -194,13 +179,18 @@
                         <div class="textContainer">
                             <p>
                                 Once you've successfully created your account,
-                                you'll be asked to log in using the credentials
+                                you'll need to verify your email address before 
+                                you can log in with the credentials
                                 you just entered.
+                            </p>
+                            <p>
+                                After verifying your email address, go ahead
+                                and log in.
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/pantheon-wordpress-setup/03_pantheon_login.png" 
+                                src="images/pantheon-wordpress-setup/03_pantheon_login_v2.png" 
                                 alt="Log in page for your newly created Pantheon account"
                             >
                             <figcaption>
@@ -222,7 +212,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/pantheon-wordpress-setup/04_pantheon_createbutton.png" 
+                                src="images/pantheon-wordpress-setup/04_pantheon_createbutton_v2.png" 
                                 alt="Your Pantheon Home page"
                             >
                             <figcaption>
@@ -262,10 +252,14 @@
                                 create our Pantheon site, we can begin building
                                 (installing) our house (WordPress).
                             </p>
+                            <p>
+                                Click the [Create New Site] button to get
+                                started.
+                            </p>
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/pantheon-wordpress-setup/04_pantheon_createbutton.png" 
+                                src="images/pantheon-wordpress-setup/04_pantheon_createbutton_v2.png" 
                                 alt="Clicking the Create New Site button on your Pantheon Home page" 
                             >
                             <figcaption>Clicking the Create New Site button on your Pantheon Home page</figcaption>
@@ -279,8 +273,8 @@
                                 the navigation on the left.
                             </p>
                             <p>
-                                There, you will find a similar yellow button 
-                                that says "Create a Free Site".
+                                There, you will find a similar button 
+                                that says [Create a Free Site].
                             </p>
                             <p>
                                 This will take you into the same workflow as 
@@ -289,7 +283,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/pantheon-wordpress-setup/04_pantheon_createbutton_alt.png" 
+                                src="images/pantheon-wordpress-setup/04_pantheon_createbutton_alt_v2.png" 
                                 alt="Alternate way of creating a new site via the Sites page" 
                             >
                             <figcaption>Alternate way of creating a new site via the Sites page</figcaption>
@@ -307,7 +301,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/pantheon-wordpress-setup/05_pantheon_createsite.png" 
+                                src="images/pantheon-wordpress-setup/05_pantheon_createsite_v2.png" 
                                 alt="Selecting the WordPress option on the 'Create a Site' page" 
                             >
                             <figcaption>
@@ -343,7 +337,7 @@
                                 Leave the Site Region as "United States".
                             </p>
                             <p>
-                                Then click the yellow "Continue" button.
+                                Then click the yellow [Continue] button.
                             </p>
                         </div>
                         <div class="imageContainer">
@@ -375,7 +369,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/pantheon-wordpress-setup/07_pantheon_createsite_inprogress.png" 
+                                src="images/pantheon-wordpress-setup/07_pantheon_createsite_inprogress_v2.png" 
                                 alt="Waiting for Pantheon to build your site" 
                             >
                             <figcaption>
@@ -392,13 +386,13 @@
                                 and turn green when the process is complete.
                             </p>
                             <p>
-                                Click the yellow "Visit your Pantheon 
-                                Site Dashboard" button.
+                                Click the yellow [Visit your Pantheon 
+                                Site Dashboard] button.
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/pantheon-wordpress-setup/08_pantheon_createsite_complete.png" 
+                                src="images/pantheon-wordpress-setup/08_pantheon_createsite_complete_v2.png" 
                                 alt="Pantheon finished creating your site" 
                             >
                             <figcaption>
@@ -426,19 +420,26 @@
                                 WordPress site.
                             </p>
                             <p>
-                                ...however, there's really only two buttons 
-                                you need to worry about in this course 
-                                (found right beneath the 'Dev' tab, which is 
-                                right beneath your site name):
+                                This page looks pretty busy, but there's really 
+                                only two buttons 
+                                you need to worry about in this course:
                                 <ul>
-                                    <li>Visit Development Site</li>
                                     <li>Site Admin</li>
+                                    <li>Clear Caches</li>
                                 </ul>
+                            </p>
+                            <p>
+                                The [Site Admin] button is important for 
+                                <em>working</em> on assignments.
+                            </p>
+                            <p>
+                                The [Clear Caches] button is important for 
+                                <em>submitting</em> assignments.
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img
-                                src="images/pantheon-wordpress-setup/09_pantheon_site_dashboard.png"
+                                src="images/pantheon-wordpress-setup/09_pantheon_site_dashboard_v2.png"
                                 alt="The Dashboard of your Pantheon Site"
                             />
                             <figcaption>
@@ -463,11 +464,12 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                If you haven't already, navigate to your 
+                                By now, you should be on your 
                                 <b>Pantheon Site</b> Dashboard.
                             </p>
                             <p class="indent">
-                                This can be found by clicking on the Sites tab 
+                                If you aren't,
+                                this can be found by clicking on the Sites tab 
                                 in the far left navigation bar, and then 
                                 clicking on the site name you want to access 
                                 the dashboard for.
@@ -475,13 +477,13 @@
                             <p>
                                 Once on the <b>Pantheon Site</b> Dashboard for 
                                 the site you want to work with, click on the 
-                                "Site Admin" button underneath the Dev tab,
+                                [Site Admin] button underneath the Dev tab,
                                 underneath the name of your site.
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img
-                                src="images/pantheon-wordpress-setup/09_pantheon_site_dashboard.png"
+                                src="images/pantheon-wordpress-setup/09_pantheon_site_dashboard_v2_justsiteadmin.png"
                                 alt="Clicking on the Site Admin button"
                             />
                             <figcaption>
@@ -511,7 +513,7 @@
                             </p>
                             <p>
                                 Leave the language as "English (United States)",
-                                and click the blue "Continue" button.
+                                and click the blue [Continue] button.
                             </p>
                         </div>
                         <div class="imageContainer">
@@ -553,9 +555,13 @@
                                 password when you set up a second WordPress site.
                             </p>   
                             <p>
-                                Aside from the <b>Username</b> and <b>Password</b>, 
-                                fill out the <b>Site Title</b> based on the 
+                                As for the <b>Site Title</b>, 
+                                fill out the text field based on the 
                                 instructions in your assignment.
+                            </p>
+                            <p class="indent">
+                                If you've forgotten what to fill out here,
+                                go back to the assignment!
                             </p>
                             <p>
                                 <b>Your Email</b> is not actually used for 
@@ -567,7 +573,7 @@
                                 checkbox unchecked.
                             </p>
                             <p>
-                                Finally, click the "Install Wordpress" button
+                                Finally, click the [Install Wordpress] button
                                 when you're done.
                             </p>
                         </div>
@@ -591,7 +597,7 @@
                                 chosen Username.
                             </p>
                             <p>
-                                Click the "Log In" to log into WordPress 
+                                Click the "Log In" link to log into WordPress 
                                 with the credentials you just specified.
                             </p>
                         </div>
@@ -707,7 +713,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/pantheon-wordpress-setup/14_wordpress_livesite.png" 
+                                src="images/pantheon-wordpress-setup/14_wordpress_livesite_v2.png" 
                                 alt="The live version of your WordPress site"
                             >
                             <figcaption>
