--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,28 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 9th</h1>
-            <h3>Week 26 Day 4 (FINALS WEEK)</h3>
+            <h1>GDWD 105 - Agenda for May 12th</h1>
+            <h3>Week 26 Day 5 (FINALS WEEK)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            If you had to live without one of the five senses,
-                            which would you pick?
+                            If you could send a message back in time to yourself
+                            on Day 1 of this course, what would you say?
                         </li>
                     </ul>
-                    <div class="img-container more-space reddish-black">
+                    <div class="img-container dark-blue-green">
                         <img 
-                            src="images/three-monkeys.jpeg"
-                            alt="three monkeys"
+                            src="images/time-traveler.webp"
+                            alt="time traveling owl"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">PRESENTATIONS</span>Restaurant Site</li>
+                        <li><span class="type">FINAL EXAM</span></li>
+                        <li><span class="type">Exercise</span>JavaScript Function Game</li>
+                        <li><span class="type">ANY REMAINING CODING ASSIGNMENTS</span></li>
                     </ul>
                 </div>
 
@@ -36,15 +38,7 @@
 
                         <h3>Period 1 (6:10pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">PRESENTATIONS</span>Restaurant Site</li>
-                            <li><span class="type">Presenter</span>Kiayam</li>
-                            <li><span class="type">Presenter</span>Tommy</li>
-                            <li><span class="type">Presenter</span>Treasure</li>
-                            <li><span class="type">Presenter</span>Kiara</li>
-                            <li><span class="type">Presenter</span>Shealeen</li>
-                            <li><span class="type">Presenter</span>Xavion</li>
-                            <li><span class="type">Presenter</span>Tyler</li>
-                            <li><span class="type">Presenter</span>Blade</li>
+                            <li><span class="type">FINAL EXAM</span></li>
                         </ul>
                     </div>
                     <!-- <h3 class="centered">Small Break (10min)</h3>
@@ -58,15 +52,9 @@
                     <div class="wrapper">
                         <h3>Period 2 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">PRESENTATIONS</span>Restaurant Site</li>
-                            <li><span class="type">Presenter</span>Kayla</li>
-                            <li><span class="type">Presenter</span>Melissa</li>
-                            <li><span class="type">Presenter</span>Riah</li>
-                            <li><span class="type">Presenter</span>Spiritual</li>
-                            <li><span class="type">Presenter</span>Trelonda</li>
-                            <li><span class="type">Presenter</span>Brianna</li>
-                            <li><span class="type">Presenter</span>Jaylene</li>
-                            <li><span class="type">Lab Time</span>Restaurant Site Revisions / Extra Credit</li>
+                            <li><span class="type">PowerPoint</span>JavaScript Functions</li>
+                            <li><span class="type">Exercise</span>JavaScript Function Game</li>
+                            <li><span class="type">Lab Time</span>Any Remaining Coding Assignments / Extra Credit</li>
                         </ul>
                     </div>
                 </div>
