--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,29 +7,28 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 12th</h1>
-            <h3>Week 26 Day 5 (FINALS WEEK)</h3>
+            <h1>GDWD 105 - Agenda for May 13th</h1>
+            <h3>Week 27 Day 1 (Career Services)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            If you could send a message back in time to yourself
-                            on Day 1 of this course, what would you say?
+                            What is a character trait that you admire in other people?
+
                         </li>
                     </ul>
-                    <div class="img-container dark-blue-green">
+                    <div class="img-container">
                         <img 
-                            src="images/time-traveler.webp"
-                            alt="time traveling owl"
+                            src="images/impressive.webp"
+                            alt="vader impressive"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">FINAL EXAM</span></li>
-                        <li><span class="type">Exercise</span>JavaScript Function Game</li>
-                        <li><span class="type">Survey</span>Finals Week Wrap Up</li>
-                        <li><span class="type">ANY REMAINING CODING ASSIGNMENTS</span></li>
+                        <li><span class="type">Exercise</span>Discussion: Careers in Graphic Design (CS)</li>
+                        <li><span class="type">Exercise</span>Discussion: Personal Branding Research (CS)</li>
+                        <li><span class="type">Exercise</span>Personal Branding Statement (CS)</li>
                     </ul>
                 </div>
 
@@ -37,26 +36,27 @@
                     <div class="wrapper">
                         <h3>Announcements (6pm-6:10pm)</h3>
 
-                        <h3>Period 1 (6:10pm-8:30pm)</h3>
+                        <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">FINAL EXAM</span></li>
+                            <li><span class="type">PowerPoint</span>Careers in Graphic Design</li>
+                            <li><span class="type">Exercise</span>Discussion: Careers in Graphic Design (CS)</li>
                         </ul>
                     </div>
-                    <!-- <h3 class="centered">Small Break (10min)</h3>
+                    <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page) [cont.]</li>
+                            
+                            <li><span class="type">PowerPoint</span>Personal Branding [pt 1]</li>
+                            <li><span class="type">Exercise</span>Discussion: Personal Branding Research (CS)</li>
                         </ul>
-                    </div> -->
+                    </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>JavaScript Functions</li>
-                            <li><span class="type">Exercise</span>JavaScript Function Game</li>
-                            <li><span class="type">Survey</span>Finals Week Wrap Up</li>
-                            <li><span class="type">Lab Time</span>Any Remaining Coding Assignments / Extra Credit</li>
+                            <li><span class="type">PowerPoint</span>Personal Branding [pt 2]</li>
+                            <li><span class="type">Exercise</span>Personal Branding Statement (CS)</li>
                         </ul>
                     </div>
                 </div>
